--- a/qa-dcf.planx-pla.net/manifest.json
+++ b/qa-dcf.planx-pla.net/manifest.json
@@ -7,22 +7,24 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:2020.11",
+    "ambassador": "quay.io/datawire/ambassador:1.4.2",
+    "arborist": "quay.io/cdis/arborist:2021.11",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "datareplicate": "quay.io/cdis/dcf-dataservice:2020.11",
-    "fence": "quay.io/cdis/fence:2020.11",
-    "indexd": "quay.io/cdis/indexd:2020.11",
-    "peregrine": "quay.io/cdis/peregrine:2020.11",
-    "pidgin": "quay.io/cdis/pidgin:2020.11",
-    "revproxy": "quay.io/cdis/nginx:2020.11",
-    "sheepdog": "quay.io/cdis/sheepdog:2020.11",
-    "portal": "quay.io/cdis/data-portal:2020.11",
+    "datareplicate": "quay.io/cdis/dcf-dataservice:2021.11",
+    "fence": "quay.io/cdis/fence:2021.11",
+    "indexd": "quay.io/cdis/indexd:2021.11",
+    "peregrine": "quay.io/cdis/peregrine:2021.11",
+    "pidgin": "quay.io/cdis/pidgin:2021.11",
+    "revproxy": "quay.io/cdis/nginx:2021.11",
+    "sheepdog": "quay.io/cdis/sheepdog:2021.11",
+    "portal": "quay.io/cdis/data-portal:2021.11",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
-    "sower": "quay.io/cdis/sower:2020.11",
-    "metadata": "quay.io/cdis/metadata-service:2020.11",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2020.11",
-    "dashboard": "quay.io/cdis/gen3-statics:2020.11",
-    "status-api": "quay.io/cdis/status-dashboard:2020.11"
+    "sower": "quay.io/cdis/sower:2021.11",
+    "metadata": "quay.io/cdis/metadata-service:2021.11",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2021.11",
+    "dashboard": "quay.io/cdis/gen3-statics:2021.11",
+    "status-api": "quay.io/cdis/status-dashboard:2021.11",
+    "guppy": "quay.io/cdis/status-dashboard:2021.11"
   },
   "sower": [
     {
@@ -31,7 +33,7 @@
       "serviceAccountName": "jobs-qa-dcf-planx-pla-net",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/manifest-indexing:2020.11",
+        "image": "quay.io/cdis/manifest-indexing:2021.11",
         "pull_policy": "Always",
         "env": [
           {
@@ -71,7 +73,7 @@
       "serviceAccountName": "jobs-qa-dcf-planx-pla-net",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/download-indexd-manifest:2020.11",
+        "image": "quay.io/cdis/download-indexd-manifest:2021.11",
         "pull_policy": "Always",
         "env": [
           {
@@ -110,7 +112,7 @@
       "action": "export",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/pelican-export:2020.11",
+        "image": "quay.io/cdis/pelican-export:2021.11",
         "pull_policy": "Always",
         "env": [
           {
@@ -187,7 +189,7 @@
   },
   "ssjdispatcher": {
     "job_images": {
-      "indexing": "quay.io/cdis/indexs3client:2020.11"
+      "indexing": "quay.io/cdis/indexs3client:2021.11"
     }
   },
   "global": {
@@ -203,11 +205,74 @@
     "dispatcher_job_num": "10",
     "netpolicy": "on",
     "tier_access_level": "regular",
-    "tier_access_limit": "50",
+    "tier_access_limit": 50,
     "public_datasets": true,
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "dd_enabled": true
   },
   "canary": {
     "default": 0
+  },
+  "scaling": {
+    "arborist": {
+      "strategy": "auto",
+      "min": 2,
+      "max": 4,
+      "targetCpu": 40
+    },
+    "portal": {
+      "strategy": "auto",
+      "min": 2,
+      "max": 4,
+      "targetCpu": 40
+    },
+    "fence": {
+      "strategy": "auto",
+      "min": 5,
+      "max": 15,
+      "targetCpu": 40
+    },
+    "presigned-url-fence": {
+      "strategy": "auto",
+      "min": 20,
+      "max": 25,
+      "targetCpu": 14
+    },
+    "indexd": {
+      "strategy": "auto",
+      "min": 4,
+      "max": 8,
+      "targetCpu": 40
+    },
+    "peregrine": {
+      "strategy": "auto",
+      "min": 2,
+      "max": 4,
+      "targetCpu": 40
+    },
+    "revproxy": {
+      "strategy": "auto",
+      "min": 4,
+      "max": 10,
+      "targetCpu": 40
+    },
+    "sheepdog": {
+      "strategy": "auto",
+      "min": 2,
+      "max": 4,
+      "targetCpu": 40
+    },
+    "guppy": {
+      "strategy": "auto",
+      "min": 2,
+      "max": 4,
+      "targetCpu": 40
+    },
+    "metadata": {
+      "strategy": "auto",
+      "min": 2,
+      "max": 5,
+      "targetCpu": 40
+    }
   }
 }
