--- a/qa-niaid.planx-pla.net/etlMapping.yaml
+++ b/qa-niaid.planx-pla.net/etlMapping.yaml
@@ -17,6 +17,7 @@ mappings:
       - name: study_completion_date
       - name: data_available
       - name: data_availability_date
+      - name: most_recent_update
       - name: data_available_for_request
       - name: clinical_trial_website
       - name: publications
