--- a/qa-niaid.planx-pla.net/manifest.json
+++ b/qa-niaid.planx-pla.net/manifest.json
@@ -46,7 +46,7 @@
     "environment": "qaplanetv1",
     "hostname": "qa-niaid.planx-pla.net",
     "revproxy_arn": "arn:aws:acm:us-east-1:707767160287:certificate/c676c81c-9546-4e9a-9a72-725dd3912bc8",
-    "dictionary_url": "https://s3.amazonaws.com/dictionary-artifacts/niaid-clinical-trials-dictionary/0.4.1/schema.json",
+    "dictionary_url": "https://s3.amazonaws.com/dictionary-artifacts/niaid-clinical-trials-dictionary/feat/previous_versions/schema.json",
     "dispatcher_job_num": "10",
     "portal_app": "gitops",
     "kube_bucket": "kube-qaplanetv1-gen3",
