--- a/qa-dcf.planx-pla.net/manifest.json
+++ b/qa-dcf.planx-pla.net/manifest.json
@@ -21,8 +21,7 @@
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "sower": "quay.io/cdis/sower:2021.11",
     "metadata": "quay.io/cdis/metadata-service:2021.11",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2021.11",
-    "guppy": "quay.io/cdis/guppy:2021.11"
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2021.11"
   },
   "sower": [
     {
