--- a/qa-ibd.planx-pla.net/etlMapping.yaml
+++ b/qa-ibd.planx-pla.net/etlMapping.yaml
@@ -87,5 +87,6 @@ mappings:
       - name: verification_date
       - name: source
       - name: rights
+      - name: brief_summary
     parent_props:
       - path: programs[program_name:name]
