--- a/qa-ibd.planx-pla.net/etlMapping.yaml
+++ b/qa-ibd.planx-pla.net/etlMapping.yaml
@@ -76,6 +76,7 @@ mappings:
       - name: name
       - name: code
       - name: title
+      - name: brief_summary
       - name: description
       - name: principle_investigator
       - name: estimated_study_completion
@@ -87,6 +88,5 @@ mappings:
       - name: verification_date
       - name: source
       - name: rights
-#       - name: brief_summary
     parent_props:
       - path: programs[program_name:name]
