--- a/qa-ibd.planx-pla.net/etlMapping.yaml
+++ b/qa-ibd.planx-pla.net/etlMapping.yaml
@@ -73,10 +73,11 @@ mappings:
     type: aggregator
     root: project
     props:
+      - name: project_id
       - name: name
       - name: code
       - name: title
-#       - name: brief_summary
+      - name: brief_summary
       - name: description
       - name: principle_investigator
       - name: estimated_study_completion
