--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -23,7 +23,7 @@ qa-nde.planx-pla.net @atharvar28
 qa-niaid.planx-pla.net @atharvar28
 qa-tb.planx-pla.net @atharvar28
 
-qa-heal.planx-pla.net/ @haraprasadj
+qa-heal.planx-pla.net @haraprasadj
 
 jenkins-blood.planx-pla.net @themarcelor @haraprasadj @atharvar28 @jingh8
 jenkins-brain.planx-pla.net @themarcelor @haraprasadj @atharvar28 @jingh8
