--- a/qa-ibd.planx-pla.net/manifest.json
+++ b/qa-ibd.planx-pla.net/manifest.json
@@ -172,7 +172,8 @@
     "netpolicy": "on",
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "maintenance_mode": "off",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "public_datasets": true
   },
   "canary": {
     "default": 0
