--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -8,7 +8,7 @@
   },
   "versions": {
     "arborist": "quay.io/cdis/arborist:master",
-    "aws-es-proxy": "quay.io/cdis/aws-es-proxy:1.1",
+    "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
     "fence": "quay.io/cdis/fence:master",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "indexd": "quay.io/cdis/indexd:master",
