--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1,13 +1,12 @@
 {
 	"gen3_commons": {
 		"HEAL": {
-			"mds_url": "https://preprod.healdata.org",
-			"commons_url": "preprod.healdata.org"
-
+			"mds_url": "https://qa-heal.planx-pla.net",
+			"commons_url": "qa-heal.planx-pla.net"
 		},
 		"JCOIN": {
-			"mds_url": "https://jcoin.datacommons.io/",
-			"commons_url" : "jcoin.datacommons.io",
+			"mds_url": "https://qa-jcoin.planx-pla.net/",
+			"commons_url" : "qa-jcoin.planx-pla.net/",
 			"columns_to_fields": {
 				"short_name": "name",
 				"full_name": "full_name",
