--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -604,7 +604,7 @@
 				"dataset_3_description": "",
 				"dataset_4_description": "",
 				"dataset_5_description": "",
-				"data_availability": "available"
+				"data_availability": "pending"
 			},
 			"per_item_values": {
 				"599ddda695679f66768b4569": {
