add new field "study_name_title"

--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -46,6 +46,7 @@
 				"subjects": "",
 				"__manifest": "",
 				"study_name": "",
+				"study_name_title": "",
 				"study_type": "",
 				"institutions": "path:contributor",
 				"year_awarded": "",
@@ -276,6 +277,7 @@
 				"subjects": "path:EnrollmentCount",
 				"__manifest": "",
 				"study_name": "",
+				"study_name_title": "",
 				"study_type": "",
 				"institutions": "path:LeadSponsorName",
 				"year_awarded": "",
@@ -466,6 +468,7 @@
 				"subjects": "",
 				"__manifest": "",
 				"study_name": "",
+				"study_name_title": "",
 				"study_type": "",
 				"institutions": "Temple University",
 				"year_awarded": "",
@@ -571,6 +574,7 @@
 				"subjects": "",
 				"__manifest": "",
 				"study_name": "",
+				"study_name_title": "",
 				"study_type": "",
 				"institutions": "Center for Public Health Law Research at the Temple University Beasley School of Law",
 				"year_awarded": "",
