add field "investigators_name"

--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -51,6 +51,7 @@
 				"institutions": "path:contributor",
 				"year_awarded": "",
 				"investigators": "path:creator",
+				"investigators_name": "path:creator",
 				"project_title": "path:title",
 				"protocol_name": "",
 				"study_summary": "",
@@ -282,6 +283,7 @@
 				"institutions": "path:LeadSponsorName",
 				"year_awarded": "",
 				"investigators": "path:OverallOfficial[0].OverallOfficialName",
+				"investigators_name": "path:OverallOfficial[0].OverallOfficialName",
 				"project_title": "path:BriefTitle",
 				"protocol_name": "",
 				"study_summary": "",
@@ -473,6 +475,7 @@
 				"institutions": "Temple University",
 				"year_awarded": "",
 				"investigators": "path:preview[0].created_by",
+				"investigators_name": "path:preview[0].created_by",
 				"project_title": "path:preview[0].title",
 				"protocol_name": "",
 				"study_summary": { "path":" preview[0].description", "filters": ["strip_html"] },
@@ -579,6 +582,7 @@
 				"institutions": "Center for Public Health Law Research at the Temple University Beasley School of Law",
 				"year_awarded": "",
 				"investigators": "",
+				"investigators_name": "",
 				"project_title": "path:title",
 				"protocol_name": "",
 				"study_summary": { "path":"description", "filters": ["strip_html"] },
