--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -592,7 +592,7 @@
 				"dataset_3_type": "",
 				"dataset_4_type": "",
 				"dataset_5_type": "",
-				"project_number": "id",
+				"project_number": "path: id",
 				"dataset_1_title": "",
 				"dataset_2_title": "",
 				"dataset_3_title": "",
