--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -224,7 +224,7 @@
       "activeDeadlineSeconds": 600,
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/batch-export:2022.01",
+        "image": "quay.io/cdis/batch-export:feat_zip",
         "pull_policy": "Always",
         "env": [
           {
