--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -346,7 +346,7 @@
                 "dataset_4_description": "",
                 "dataset_5_description": "",
                 "data_availability": "pending",
-				"data_resource": "clinicaltrials.gov"
+				"data_resource": "CinicalTrials.gov"
             },
             "per_item_values": {
                 "STU-2019-0743": {
