--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1152,7 +1152,7 @@
                     "data_availability": "available",
                     "study_url": "https://pdaps.org/datasets/covid-19-mitigation-laws-at-state-correctional-facilities-relating-to-opioi",
                     "dataset_1_type": "Codebook",
-                    "dataset_2_type": "data",
+                    "dataset_2_type": "Data",
                     "dataset_4_type": "report",
                     "dataset_3_type": "protocol",
                     "dataset_1_title": "covid-19-moud-at-state-correctional-facilities-codebook-021022.pdf",
