--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1195,7 +1195,7 @@
                     "data_availability": "available",
                     "study_url": "https://pdaps.org/datasets/covid-19-state-medicaid-waivers",
                     "dataset_2_type": "data",
-                    "dataset_1_type": "codebook",
+                    "dataset_1_type": "Codebook",
                     "dataset_4_type": "Report",
                     "dataset_3_type": "Protocol",
                     "dataset_2_title": "covid-19-state-medicaid-waivers-data-020222.xlsx",
