--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1237,7 +1237,7 @@
                     "authz": "/programs/NIDA/projects/PDAPS",
                     "data_availability": "available",
                     "study_url": "https://pdaps.org/datasets/increasing-access-to-buprenorphine-and-methadone-during-covid-19",
-                    "dataset_1_type": "codebook",
+                    "dataset_1_type": "Codebook",
                     "dataset_2_type": "data",
                     "dataset_4_type": "report",
                     "dataset_3_type": "protocol",
