--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1194,7 +1194,7 @@
                     "authz": "/programs/NIDA/projects/PDAPS",
                     "data_availability": "available",
                     "study_url": "https://pdaps.org/datasets/covid-19-state-medicaid-waivers",
-                    "dataset_2_type": "data",
+                    "dataset_2_type": "Data",
                     "dataset_1_type": "Codebook",
                     "dataset_4_type": "Report",
                     "dataset_3_type": "Protocol",
