--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1240,7 +1240,7 @@
                     "dataset_1_type": "Codebook",
                     "dataset_2_type": "data",
                     "dataset_4_type": "report",
-                    "dataset_3_type": "protocol",
+                    "dataset_3_type": "Protocol",
                     "dataset_1_title": "buprenorphine-and-methadone-during-covid-19-codebook-020222.pdf",
                     "dataset_2_title": "buprenorphine-and-methadone-during-covid-19-data-020222.xlsx",
                     "dataset_4_title": "buprenorphine-and-methadone-during-covid-19-report-02102022.pdf",
