--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1238,7 +1238,7 @@
                     "data_availability": "available",
                     "study_url": "https://pdaps.org/datasets/increasing-access-to-buprenorphine-and-methadone-during-covid-19",
                     "dataset_1_type": "Codebook",
-                    "dataset_2_type": "data",
+                    "dataset_2_type": "Data",
                     "dataset_4_type": "Report",
                     "dataset_3_type": "Protocol",
                     "dataset_1_title": "buprenorphine-and-methadone-during-covid-19-codebook-020222.pdf",
