--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1153,7 +1153,7 @@
                     "study_url": "https://pdaps.org/datasets/covid-19-mitigation-laws-at-state-correctional-facilities-relating-to-opioi",
                     "dataset_1_type": "Codebook",
                     "dataset_2_type": "Data",
-                    "dataset_4_type": "report",
+                    "dataset_4_type": "Report",
                     "dataset_3_type": "Protocol",
                     "dataset_1_title": "covid-19-moud-at-state-correctional-facilities-codebook-021022.pdf",
                     "dataset_2_title": "covid-19-moud-at-state-correctional-facilities-data-020222.xlsx",
