chore(jenkins-*): use fixed ES aliases in gppy cfg

--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -296,35 +296,11 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins-blood.planx-pla.net_study",
-        "type": "study"
+        "index": "jenkins_subject_alias",
+        "type": "subject"
       },
       {
-        "index": "jenkins-blood.planx-pla.net_case",
-        "type": "case"
-      },
-      {
-        "index": "jenkins-blood.planx-pla.net_medical_history",
-        "type": "medical_history"
-      },
-      {
-        "index": "jenkins-blood.planx-pla.net_biospecimen",
-        "type": "biospecimen"
-      },
-      {
-        "index": "jenkins-blood.planx-pla.net_aliquot",
-        "type": "aliquot"
-      },
-      {
-        "index": "jenkins-blood.planx-pla.net_read_group",
-        "type": "read_group"
-      },
-      {
-        "index": "jenkins-blood.planx-pla.net_publication",
-        "type": "publication"
-      },
-      {
-        "index": "jenkins-blood.planx-pla.net_file",
+        "index": "jenkins_file_alias",
         "type": "file"
       },
       {
@@ -332,7 +308,7 @@
         "type": "clinical_trials"
       }
     ],    
-    "config_index": "jenkins-blood.planx-pla.net_array-config",
+    "config_index": "jenkins_configs_alias",
     "auth_filter_field": "auth_resource_path"
   },
   "scaling": {
