--- a/jenkins-brain.planx-pla.net/manifest.json
+++ b/jenkins-brain.planx-pla.net/manifest.json
@@ -293,11 +293,11 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins-brain.planx-pla.net_etl",
-        "type": "case"
+        "index": "jenkins_subject_alias",
+        "type": "subject"
       },
       {
-        "index": "jenkins-brain.planx-pla.net_file",
+        "index": "jenkins_file_alias",
         "type": "file"
       },
       {
@@ -305,7 +305,7 @@
         "type": "clinical_trials"
       }
     ],
-    "config_index": "jenkins-brain.planx-pla.net_array-config",
+    "config_index": "jenkins_configs_alias",
     "auth_filter_field": "auth_resource_path"
   },
   "scaling": {
