--- a/jenkins-dcp.planx-pla.net/manifest.json
+++ b/jenkins-dcp.planx-pla.net/manifest.json
@@ -289,11 +289,11 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins-dcp.planx-pla.net_etl",
+        "index": "jenkins_subject_alias",
         "type": "subject"
       },
       {
-        "index": "jenkins-dcp.planx-pla.net_file",
+        "index": "jenkins_file_alias",
         "type": "file"
       },
       {
@@ -301,7 +301,7 @@
         "type": "clinical_trials"
       }
     ],
-    "config_index": "jenkins-dcp.planx-pla.net_array-config",
+    "config_index": "jenkins_configs_alias",
     "auth_filter_field": "auth_resource_path"
   },
   "scaling": {
