chore(jenkins-*): make etlMapping names consistent

--- a/jenkins-brain.planx-pla.net/etlMapping.yaml
+++ b/jenkins-brain.planx-pla.net/etlMapping.yaml
@@ -1,5 +1,5 @@
 mappings:
-  - name: jenkins-brain.planx-pla.net_etl
+  - name: jenkins-brain.planx-pla.net_case
     doc_type: case
     type: aggregator
     root: case
