--- a/jenkins-genomel.planx-pla.net/etlMapping.yaml
+++ b/jenkins-genomel.planx-pla.net/etlMapping.yaml
@@ -1,5 +1,5 @@
 mappings:
-  - name: jenkins-genomel_etl
+  - name: jenkins-genomel.planx-pla.net_case
     doc_type: case
     type: aggregator
     root: case
@@ -20,7 +20,7 @@ mappings:
       - name: _aliquots_count
         path: samples.aliquots
         fn: count
-  - name: jenkins-genomel_file
+  - name: jenkins-genomel.planx-pla.net_file
     doc_type: file
     type: collector
     root: None
