feat(argo): test new config script

--- a/qa-mickey.planx-pla.net/manifest.json
+++ b/qa-mickey.planx-pla.net/manifest.json
@@ -86,5 +86,9 @@
     ],
     "config_index": "etl_mickey_array-config",
     "auth_filter_field": "auth_resource_path"
+  },
+  "argo": {
+     "bucket": "second-argo-bucket",
+     "internal-s3-bucket": "gen3-argo-707767160287-devplanetv1"
   }
 }
