fix(test): correct etl-mapping to tube tests

--- a/jenkins-dcp.planx-pla.net/etlMapping.yaml
+++ b/jenkins-dcp.planx-pla.net/etlMapping.yaml
@@ -44,6 +44,7 @@ mappings:
         props:
           - name: bp_systolic
           - name: bp_diastolic
+        sorted_by: updated_datetime, desc
       - path: medication_records
         props:
           - name: hypertension_meds
