--- a/jenkins-brain.planx-pla.net/etlMapping.yaml
+++ b/jenkins-brain.planx-pla.net/etlMapping.yaml
@@ -177,7 +177,7 @@ mappings:
         fn: count
     joining_props:
       - index: file
-        join_on: case_id
+        join_on: _case_id
         props:
           - name: data_format
             src: data_format
